* Added documentation on the legal types of comments in the XML config file.
* Cleaned up the configuration class names.
* Named the configuration variables more consistently.
* Updated TODO.
* Removed the PyDirector string from the .tac file.
* Updated TODO.
* Updated the test plan.
* Updated configs and admin scripts for running additional tests.

2008.06.21 oubiwann

* Updated the config for benchmarking.
* Updated TODO.
* Updated admin.poges to use the new refresh rate config option.
* Added a configure option for the refresh rate.
* Updated the docs with info on the new "refresh" config option.
* Updated TODO.
* Cleaned up a listener import.
* Cleaned up formatting in listener.
* Removed reactor.run() call in listener.
* Minor scheduler tweaks.
* Updated TODO.
* Removed old, unused publisher (we're using Twisted to publish data to the
web).
* Updated TODO.
* Updated the sample config to have two service groups.
* Updated the docs for the web api.
* Added an admin definitions file for use with admin scripts.
* Changed commit.sh to use the defs.
* Added push.sh.
* Updated the scheduler docs.
* Updated the configuration docs.
* Changed the date separators.
* Added the changes from the last couple days to the change log.
* Grouped changes by day.
* Removed the indents from the ChangeLog.
* Added commit script.
* Added an admin clean script.
* Moved txlb.web to txlb.admin.
* Moved the .pem file generation to the etc dir.
* Finished ferrting out the old project name and references in all the code.
* Incremented version number (for next release).
* Fixed setup.py.
* Added admin scripts for running servers during development.
* Renamed the .tac file to accord with the project name.
* Fixed a typo in the LICENSE.
* File house cleaning.
* Removed package info file.
* Removed load profiling code.
* Updated TODO with current status.
* Fixed old import in setup.py.
* Updated the version number for the txLoadBalancer release. This release