@@ -15,6 +15,7 @@
 * Updated TODO.
 * Updated the test plan.
 * Updated configs and admin scripts for running additional tests.
+* Fixed error in config.
 
 2008.06.21 oubiwann
 
